# ChangeLog for gnome-base/gnome-keyring
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-keyring/ChangeLog,v 1.232 2013/05/05 08:09:17 pacho Exp $

*gnome-keyring-3.8.2 (05 May 2013)

  05 May 2013; Pacho Ramos <pacho@gentoo.org> +gnome-keyring-3.8.2.ebuild,
  -gnome-keyring-3.8.0.ebuild:
  Version bump, drop old

*gnome-keyring-3.8.1 (28 Apr 2013)

  28 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnome-keyring-3.8.1.ebuild,
  -gnome-keyring-3.6.2.ebuild:
  Version bump, use fcaps.eclass (#454908 by SpanKY), fix dependencies (#467416
  by Tolga Dalman), drop unexisting configure options. Drop old

*gnome-keyring-3.6.3 (30 Mar 2013)

  30 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-keyring-3.6.3.ebuild, gnome-keyring-3.8.0.ebuild:
  Version bump.

*gnome-keyring-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +gnome-keyring-3.8.0.ebuild:
  Version bump for Gnome 3.8

  07 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-keyring-3.4.1-r1.ebuild,
  -files/gnome-keyring-3.4.1-gpg-cache-method-1.patch,
  -files/gnome-keyring-3.4.1-gpg-cache-method-2.patch:
  Clean up old revision.

  25 Feb 2013; Zac Medico <zmedico@gentoo.org> gnome-keyring-3.6.2.ebuild:
  Add ~arm-linux keyword.

*gnome-keyring-3.6.2 (17 Dec 2012)

  17 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-keyring-2.32.1.ebuild, gnome-keyring-2.32.1-r1.ebuild,
  -gnome-keyring-3.2.2.ebuild, -files/gnome-keyring-3.2.2-gold-glib-2.32.patch,
  -gnome-keyring-3.4.1.ebuild, gnome-keyring-3.4.1-r1.ebuild,
  +gnome-keyring-3.6.2.ebuild:
  Version bump for gnome-3.6. Drop useless doc USE flag. Update homepage. Drop
  old.

*gnome-keyring-3.4.1-r1 (24 Oct 2012)

  24 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-keyring-2.32.1.ebuild, gnome-keyring-2.32.1-r1.ebuild,
  +files/gnome-keyring-2.32.1-glib-2.32.patch, gnome-keyring-3.2.2.ebuild,