@@ -8,15 +8,15 @@ DIST gnome-keyring-3.6.3.tar.xz 1141948 SHA256 e0153a3f16a25e943237e624205487080
 DIST gnome-keyring-3.8.1.tar.xz 1140232 SHA256 56e0a47c021fb2d2fd2c723a0e1c9e46c9a0a81ed865ac1588c19aca16ca4f37 SHA512 a31ebada5528082c511ad3cb6a11aab03a76a3fc2b1012ea505483a1078f6ad229fd32fe846cbd77703ca4644225091aa05870c870c7c31262bc0338fe011fad WHIRLPOOL 9c0e561ab6047ff59d917c51a90311b320c533dfd076d66030efac15a55292d893d6b3c78813f0ea05eaa8a93a0c91527e26d82cc5eb87d93e413a64cfe6b671
 DIST gnome-keyring-3.8.2.tar.xz 1138808 SHA256 f05692bb32db4d1afa65205ac4e68fa2b79107aca2393e237cf38f880cb7b868 SHA512 513c92ac3b5095b33dc075cdf318e750bf2c53d1344da93300c8888122abd6063f83227d6ae4de3903823c227281e51b4a15783770f86e222aeaeae89f8f2302 WHIRLPOOL c47605f594ebf133e91a585741a8fa4e8d8139f0f4d50d310d0d0cde1df6a8ae6fea569480cd948b3c7fa341045b2ba6a34e10c4c48357de70354edd06483701
 EBUILD gnome-keyring-2.32.1-r1.ebuild 2050 SHA256 3a06de08fda7f013e5f2ec5dd2bcd2d3e44f98fb1036404bc0862caf1094f39a SHA512 3dc6362f2687a3989879937abd67d43e925b46c0822b41fe0b530d8feecd41f39c15c00ee6b8bc12576c789c980fa5ca585ad93731b35ca1d1c537439e330f53 WHIRLPOOL dfe94dff29550f966515b202d7392f5340604da3ed7fa1d4e9b8dac76746c62fd9330064896435f7a800c6b0ab213f2fee4ebc1d42c41d67e36eb36df6e08065
-EBUILD gnome-keyring-3.6.3.ebuild 3656 SHA256 e2fa6c3aacc64af11ef6660bf1ac4a763552d96f8734c1e392a3729b3d23ba78 SHA512 34400878f1e4dea9e02fadd24be683df024536a5f652d0c39ae3578ec5cb8597cfd51c6a9106d6c01138bb10493f597690040a98da45629f84a2077d8fa69650 WHIRLPOOL 35d5ce0bb086cd85d50f9aefd21958c5751d2419a9eb2bcfecb3b83451a613a16fe22ba506b6ab20764ebc9ab45acae0da749cda45f1a59d769625be9557e74a
+EBUILD gnome-keyring-3.6.3.ebuild 2399 SHA256 493e2f667caaaf023763e97584fac536fbbba9052295f79c514d3f7dcc55b6ac SHA512 a37a09ee22b5af85ee666a3225b794ba9a01af2e8b1ee0b2e3fc689477236cee348b47ebe72ff60ed3e4c0e080950777f21596228dde8bd2d516f60367b52f72 WHIRLPOOL ddb69b23413cafdc28719ac40e5b837f3d3570c7de6f2baaf170e5f2f477d78f9d6135956590b238c47e8dba5bffbe28ecb05d073684ec28190f7552dd32f5e9
 EBUILD gnome-keyring-3.8.1.ebuild 2261 SHA256 4a811504b9164d4df8375cd280042423d425df28772ac6aa202f0bc20e772fa3 SHA512 6c48088d2c1e4f8c59e5e80763da986a2732848547ead9ad1c8d807db700033e17a915ef9dc7e42467f6dd281046a8a76f805a0a85048f35842e2356fe8201d7 WHIRLPOOL 74717cc66281e920e2e6cd670806b3ce4aeb83d686016970fd5e9ee728b0f31080054694d35558e09099f6ef5030aead618590387c1225c10af13ac120406549
 EBUILD gnome-keyring-3.8.2.ebuild 2261 SHA256 ea59f25b3c4de352d4fb575791a458a77922b40ad4b8180e23f6a1c70b02e8b3 SHA512 a244d8d2957b0bf0ee1ec7fb3156059333a6e58aa809125db441db62b2029990e18dd110d157651cece8e8566a8eff6cd1e2d8f23b07983b3ab0b7f90c5cff48 WHIRLPOOL 1dac4be251357bba35b80df63e2e96d881c5d705a4a80f6f1a3ef06eb9bdd4625dbaf5479ae79a07cbd0248b5a77b72e495741355be8b78c7e58c05bc9f6ea77
-MISC ChangeLog 34312 SHA256 dc63610dc7a7df9698139117e94b874b8b68905dc6d74d971905e86925c6c902 SHA512 e4f735a47485db1928dc7e4f83042cb1cc74074d1909c4818bd4599e00de3771974b9e723f22053ee3ab33b107c3eb2b64903da87b2192427148fa943b55288b WHIRLPOOL cc4ab792a583dda025f70649323f7af89cc88013b5911fac440724e07c7696c2ebc0a1c46330ef4809716795239af880608f4b4b12c4d758ac139a4388632a61
-MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
+MISC ChangeLog 34501 SHA256 b2ce103bcd7f8180f27c110f78af13ff4459c8a67d77b594425e463631590afc SHA512 5a041c8bd112e89bb26b4153381b742690b389d65b07c21d081c5d4c99c8b75bd74293adcc25acdeed75924ba8ffe0faacc728c94774b7e20a3ae2eb17028bfe WHIRLPOOL 6a88730a9cb44746929e1f47ed766aa0612e52d27f8b9c3bf6eb71a746abf15137b5e262bd3e627ab5c7dd2e085468749d327ee12d923d4849f62726f61e01c7
+MISC metadata.xml 645 SHA256 247a1437483f3ea8d7df3f99c065953686d0026f33120a3763fc46670278260f SHA512 a5f543871ff2cc3e56b1d703703338feed369933a6d183489e258b5e60b6b7246379a926d11e0697e3380a6bef2289beea48ac208691b16ea6a09306e44043aa WHIRLPOOL c2d5faa8a1d05dca37490fadb7932ec520948c8e0c9962778f05f4f2127b7bf86f31915be2cbbceffbc01f04769480bf15dae985c7575cc4667fe3afe3d97e7d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGGE64ACgkQCaWpQKGI+9SBwACfX05AMM/mjjhfZf+1mHiW8EOz
-W1kAn0PZDSftt5O3lMPCpzM827o42qVw
-=y6Zq
+iEYEAREIAAYFAlGNT5oACgkQ1fmVwcYIWAYPGwCgu2fl+ft0RPH0R1AZ20FD83Td
+BG8AoL/t5689P//lL8j+LMJF1xrY8KDm
+=QcFQ
 -----END PGP SIGNATURE-----
