@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>gnome</herd>
+	<herd>gnome</herd>
+	<longdescription lang="en">
+		GNOME Keyring is a collection of components in GNOME that store
+		secrets, passwords, keys, certificates and make them available to
+		applications. It is integrated with the user's login, so that
+		their secret storage can be unlocked when the user logins into their
+		session. It is based around a standard called PKCS#11, which is a
+		standard way for applications to manage certificates and keys on
+		smart cards or secure storage.
+	</longdescription>
 </pkgmetadata>
